index.css
body {
  background: rgb(230, 230, 225);
  margin: 0;
}

.game-ui {
  position: absolute;
  width: 100%;
  height: 64px;
  background: rgba(230, 230, 230, 0.5);
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 16px;
  box-sizing: border-box;
}

.game-ui .game-score {
  flex: 1;
  text-align: center;
  font-size: 18px;
  font-weight: bold;
}

.game-ui .game-booster {
  flex: 1;
  text-align: right;
  font-size: 18px;
}

.game-ui .game-pause {
  padding: 5px 10px;
  background: #28a745;
  color: white;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-size: 14px;
  text-align: center;
  margin-left: 16px; /* Added margin to ensure spacing */
}

.game-ui .play-pause:hover {
  background: #218838;
}

.game-ui .play-pause:active {
  background: #1e7e34;
}

.game-over {
  position: absolute;
  width: 100%;
  height: 100%;
  background: rgba(0,0,0, .5);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  color: white;
  font-size: 24px;
}

.game-over h2 {
  margin-bottom: 16px;
}

.game-over .game-restart {
  padding: 8px 16px;
  background: #f00;
  color: white;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

.game {
  width: 100%;
  height: 90%;
  display: flex;
  align-items: top;
  justify-content: center;
}

.game canvas {
  max-width: 100%;
  max-height: 100%;
  box-shadow: 0 0 12px 6px rgba(0, 20, 40, 0.07);
  overflow: hidden;
  vertical-align: top;
}

.game-rotation {
  position: absolute;
  width: 100%;
  bottom: 16px;
  display: flex;
  justify-content: space-between;
  padding: 0 16px;
  box-sizing: border-box;
}

.game-rotation .rotate-left,
.game-rotation .rotate-right {
  padding: 8px 16px;
  background: #007bff;
  color: white;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-size: 14px;
}

.game-rotation .rotate-left:hover,
.game-rotation .rotate-right:hover {
  background: #0056b3;
}

.game-rotation .rotate-left:active,
.game-rotation .rotate-right:active {
  background: #004085;
}

.hidden {
  display: none;
}

